@@ -1,0 +1,2 @@
+Site URL: https://www.eroticage.net/
+Contact & DMCA: https://www.eroticage.net/dmca/
