@@ -3,3 +3,4 @@ Added - Thepornfull
 Speedporn - subfolder fixes and additions
 JavHoHo - fixed
 Pornhub - categories fixed
+Added - Eroticage
